[package]
name = "vitreus-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
jsonrpsee = { workspace = true, features = ["server"] }
thiserror = { workspace = true, default-features = true }

mmr-rpc = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-consensus-babe = { workspace = true, default-features = true }
sc-consensus-babe-rpc = { workspace = true, default-features = true }
sc-consensus-beefy-rpc = { workspace = true, default-features = true }
sc-consensus-grandpa-rpc = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-network-sync = { workspace = true, default-features = true }
sc-rpc = { workspace = true, default-features = true }
sc-rpc-spec-v2 = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }
sc-sync-state-rpc = { workspace = true, default-features = true }
sc-transaction-pool = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-consensus-babe = { workspace = true, default-features = true }
sp-consensus-beefy = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true, default-features = true }
substrate-state-trie-migration-rpc = { workspace = true, default-features = true }

fc-api = { workspace = true, default-features = true }
fc-mapping-sync = { workspace = true, default-features = true }
fc-rpc = { workspace = true, default-features = true }
fc-rpc-core = { workspace = true, default-features = true }
fc-storage = { workspace = true, default-features = true }
fp-rpc = { workspace = true, default-features = true }

# RPC modules
polkadot-rpc = { workspace = true, default-features = true }
pallet-transaction-payment-rpc = { workspace = true, default-features = true }

energy-fee-rpc = { workspace = true, default-features = true }
energy-generation-rpc = { workspace = true, default-features = true }
node-rpc-server = { workspace = true, default-features = true }

vitreus-power-plant-runtime = { workspace = true, default-features = true }
vitreus-utility-runtime-api = { workspace = true, default-features = true }
