[project]
name = "e2e-tests"
version = "0.1.0"
description = ""
authors = [{ name = "Innowise FinTech Team" }]
dependencies = [
    "web3>=6.4.0",
    "substrate-interface>=1.7.2",
    "eth-abi>=4.0.0",
    "eth-utils>=2.1.1",
    "scalecodec>=1.2.5",
]
requires-python = ">=3.11"

[tool.pdm.dev-dependencies]
dev = ["setuptools>=67.8.0"]


[tool.pyright]
extraPaths = [".venv/lib/python3.11/site-packages"]
