[package]
name = "chain-spec"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
hex-literal = { workspace = true }
serde = { workspace = true }

sc-chain-spec = { workspace = true }
sc-service = { workspace = true }
sp-consensus-babe = { workspace = true, features = ["default"] }
sp-consensus-grandpa = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }
sp-runtime = { workspace = true, features = ["default"] }
sp-state-machine = { workspace = true, features = ["default"] }
vitreus-power-plant-runtime = { workspace = true, features = ["default"] }
pallet-claiming = { workspace = true, features = ["default"] }

polkadot-primitives = { path = "../../primitives" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }

sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

[build-dependencies]
hex-literal = { workspace = true }
csv = "1.3.0"
