[package]
name = "chain-spec"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
rand = { workspace = true, default-features = true }
hex-literal = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }

polkadot-primitives = { workspace = true, default-features = true }
polkadot-runtime-parachains = { workspace = true, default-features = true }

sc-chain-spec = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }
sc-sync-state-rpc = { workspace = true, default-features = true }
sp-consensus-babe = { workspace = true, default-features = true }
sp-consensus-beefy = { workspace = true, default-features = true }
sp-consensus-grandpa = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }

pallet-claiming = { workspace = true, default-features = true }
vitreus-power-plant-runtime = { workspace = true, default-features = true }

[build-dependencies]
hex-literal = { workspace = true, default-features = true }
csv = { workspace = true, default-features = true }

[features]
# Configure the native runtimes to use.
mainnet-native = ["vitreus-power-plant-runtime/mainnet-runtime"]
testnet-native = ["vitreus-power-plant-runtime/testnet-runtime"]
