[package]
name = "eth-rpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum = { workspace = true, features = ["with-codec", "with-serde"] }
ethereum-types = { workspace = true }
fc-rpc = { workspace = true }
fc-rpc-core = { workspace = true }
fp-rpc = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
rustc-hex = "2.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
sp-runtime = { workspace = true }
sp-blockchain = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sc-client-api = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-transaction-pool = { workspace = true }
