[package]
name = "pallet-claiming"
version = "0.1.0"
authors = ["Innowise FinTech Team"]
edition = "2021"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-runtime = { workspace = true }
pallet-balances = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

log = { workspace = true }
serde = { workspace = true, default-features = false, features = ["alloc"] }
serde_derive = { workspace = true }
rustc-hex = { workspace = true, default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-vesting = { workspace = true }
sp-runtime = { workspace = true }
libsecp256k1 = "0.7.0"
hex-literal = "0.4.1"

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
    "rustc-hex/std",
    "serde/std",
    "sp-io/std",
    "sp-std/std",
    "scale-info/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "pallet-balances/std",
    "pallet-vesting/std",
]
try-runtime = [ "frame-support/try-runtime" ]
